# godot-rust-helper

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
src/: commands.js  content.js  find.js  utils.js
test/: godot-rust-helper-node.test.js  godot-rust-helper.test.js
test/godot-test-project/: project.godot
test/godot-test-project/rust-modules/: hello.gdnlib
test/godot-test-project/rust-modules/hello/: hello.gdnlib
test/godot-test-project/rust-modules/world/: world.gdnlib
test/test-environment/: godot-rust-helper.json
test/test-environment/hello/: Cargo.toml
test/test-environment/world/: Cargo.toml
test/test-environment/world/src/: lib.rs
